# cpp-adv-2026-06-08

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  Dockerfile.simple  devcontainer.json
_exercises/enable-if-ex/: test_copy_optimization.cpp
_exercises/move-semantics-ex/: paragraph.hpp  tests_move_semantics.cpp
_exercises/shared-ptr-ex/: tests_observer.cpp
_exercises/smart-ptr-ex/: tests_smart_ptrs.cpp
_exercises/templates-ex/: tests_stack.cpp  tests_zero.cpp
_exercises/unique-ptr-ex/: fwd_list.hpp
_project-template/: tests.cpp
constexpr/: tests.cpp
move-semantics/: move_semantics_1.cpp  move_semantics_2.cpp  move_semantics_3.cpp  move_semantics_motivation.cpp  perfect_forwarding.cpp
smart-pointers/: shared_ptrs_leak.cpp  smart_pointers.cpp
templates/: tests_sfinae.cpp  tests_templates.cpp  tests_traits_and_policies.cpp  tests_type_traits.cpp  tests_variadic_templates.cpp
type-deduction/: type_deduction.cpp
